--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <b>Area:</b>
-  <table border-width="1">
+  <table>
 
   	<% points = GeoHelper.points_array_from_polygon(@game.area) %>
   	<% for i in 0..points.length-1 do %>
